--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -32,7 +32,7 @@ $third_font_size: 24px;
     } 
 
     .logo{
-        width: 6vw !important;
+        width: 10vw !important;
     }
 
     .button{
@@ -142,6 +142,62 @@ $third_font_size: 24px;
             display: block;
         }
     }
+}
+
+.lost_cards{
+    padding-top: 25px;
+    margin-left: 0 !important; 
+    margin-right: 0 !important;
+
+    .lost_cards_animal{
+        border-radius: 0 0 15px 15px;
+        padding: 0px !important;
+        margin-right: 0px;
+
+        .img{
+            position: relative;
+            z-index: 1;
+
+            .post_text{
+                position: absolute;
+                display: none;
+                top: 45%;
+                left: 25%;
+                color: white;
+                font-size: 22px;
+                font-weight: 600;
+            }
+
+            .background{
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
+        }
+    }
+
+    .lost_cards_animal:hover{
+        box-shadow: 0px 0px 10px black;
+        
+        img{
+            filter: blur(3px);
+        }
+
+        .background{
+            background-color: $main_color;
+            z-index: 2;
+            width: 100%;
+            height: 100%;
+            opacity: 0.5;
+        }
+
+        .post_text{
+            z-index: 3;
+            display: block;
+        }
+    } 
 }
 
 .main-big-text{
@@ -440,6 +496,29 @@ $third_font_size: 24px;
         border: 2px solid $main_color;
         background-color: white;
     }
+}
+
+.form-new-lost-animal{
+    width: 25%;
+    margin: 0 auto;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid $main_color;
+    text-align: center;
+
+    form{
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+        margin: 0 auto;
+
+        li{
+            list-style-type: none    
+        }        
+    }
+
+
+    
 }
 
 .login{
