--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" aria-current="page" href="#">О проекте</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'newLostAnimal' %}">Разместить фотографию потерянного животного</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'newLostAnimal' %}">Разместить потерянное животное</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'support' %}">Стать спонсором</a>
