--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -175,6 +175,11 @@ $third_font_size: 24px;
                 right: 0;
                 bottom: 0;
             }
+
+            img{
+                height: 250px;
+                object-fit: contain;
+            }
         }
     }
 
@@ -541,7 +546,7 @@ $third_font_size: 24px;
             margin-top:20px;
         }
 
-        p{
+        p, div{
             margin-bottom: 5px;
 
             span{
