--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -635,6 +635,10 @@ $third_font_size: 24px;
 
 }
 
+#id_choices_type_card li{
+    list-style-type: none;
+}
+
 #id_budget_money{
     height: 160px !important;
 }
