--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -393,6 +393,16 @@ $third_font_size: 24px;
     }
 }
 
+.hotReports{
+    .hotReport{
+        padding: 15px;
+        width: 100%;
+        background-color: rgba(247, 222, 77, 0.2);
+        border-radius: 15px;
+        margin-top: 10px;
+    }
+}
+
 .all_help_description{
     .name{
         font-size: 24px;
