--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" aria-current="page" href="#">Информация партнерам и волонтерам</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'shelters' %}">Приюты</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'shelters' %}">Приюты и их ности</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">Архив</a>
