--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -78,7 +78,9 @@ $third_font_size: 24px;
                 position: absolute;
                 display: none;
                 top: 45%;
-                left: 25%;
+                left: 0;
+                right: 0;
+                text-align: center;
                 color: white;
                 font-size: 22px;
                 font-weight: 600;
@@ -173,7 +175,9 @@ $third_font_size: 24px;
                 position: absolute;
                 display: none;
                 top: 45%;
-                left: 25%;
+                left: 0;
+                right: 0;
+                text-align: center;
                 color: white;
                 font-size: 22px;
                 font-weight: 600;
